--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,22 @@
     
   }
   
+  #text{
+    color: green;
+    font-family: Courier New;
+    font-size: 30px;
+    text-shadow: 0px 0px 10px green, 0px 0px 5px green;
+  }
   
+  textarea{
+
+    height: 1000px;
+    width: 640px;
+    background: transparent;
+    border-color: transparent;
+
+  }
+
   /*
    * Map on left, controls on right
    * Adapted for the mobile Medium app
