--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
  * General Styling
  */
  body {
+   background-color: #232f3e;
     font-family: Calibri;
     transition: 0.2s ease;
     text-align: center;
@@ -13,7 +14,8 @@
   }
   /* center everything in game container */
   .game-container {
-    margin: 0px auto;
+    margin: 0x auto;
+    margin-top: 5rem;
   }
   /*
    * Map screen
@@ -33,10 +35,13 @@
   }
   
   #text{
-    color: green;
+    background-color: #1b242f;
+    color: orange;
     font-family: Courier New;
     font-size: 30px;
     text-shadow: 0px 0px 10px green, 0px 0px 5px green;
+    margin: 3rem;
+    padding: 2rem 1rem;
   }
   
   textarea{
